FIX: Remove typo, trim code

--- a/src/main/resources/templates/main/hot.html
+++ b/src/main/resources/templates/main/hot.html
@@ -8,7 +8,7 @@
 </nav>
 
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
+    <div class="main col-lg-8 bg-white m-auto p-3">
 
         <form th:action="@{/main/hot}" th:method="GET" id="searchForm">
             <div class="input-group">
