--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -9,7 +9,7 @@
 
 
 <section>
-    <div class="main col-lg-8  bg-white m-auto h-100 p-3 overflow-auto">
+    <div class="main col-lg-8  bg-white m-auto h-100 p-3">
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -46,7 +46,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="userBoard : ${userBoards}">
+                                <tr th:each="userBoard : ${userBoards.dtoList}">
                                     <td th:text="${userBoard.title}"></td>
                                     <td>[[${#temporals.format(userBoard.createdAt, 'yyyy/MM/dd')}]]</td>
                                 </tr>
