--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -122,7 +122,7 @@
                 <li>
                     <a class="nav-link link-dark" th:classappend="${sidebar == 'REPORT'} ? 'nav-line active'" th:href="@{/report/today}">
                         <i class="fa fa-list-alt"></i>&nbsp;&nbsp;
-                        <span>최근공시</span>
+                        <span>공시</span>
                     </a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
