--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -8,10 +8,10 @@
 </nav>
 
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
+    <div class="main col-lg-8 bg-white m-auto p-3">
 
         <div>
-            <a class="btn btn-outline-secondary py-1 px-2" th:href="@{/board/list(stock=${stockId})}">
+            <a class="btn btn-outline-secondary py-1 px-2" th:href="@{/board/list(stock=${board.stock.stockId})}">
                 <i class="fa fa-arrow-left"></i> 돌아가기
             </a>
         </div>
@@ -19,7 +19,7 @@
         <h2 class="text-center pt-5 pb-2" th:text="${board.title}"></h2>
 
         <div class="p-2 d-flex justify-content-between">
-            <h5 class="text-primary" th:text="${board.user.username}"></h5>
+            <h5 class="text-primary" th:text="${board.username}"></h5>
             <h5>[[${#temporals.format(board.createdAt, 'yyyy/MM/dd')}]]</h5>
         </div>
         <br>
@@ -30,13 +30,12 @@
         </div>
 
         <div class="p-2 text-end">
-            <div th:if="${board.user.username} == ${user}" class="d-flex justify-content-md-end p-1">
-                <a type="button" class="btn btn-dark mr-1 border border-0" th:href="@{/board/update(s=${stockId}, b=${board.boardId})}">
+            <div th:if="${board.username} == ${username}" class="d-flex justify-content-md-end p-1">
+                <button type="button" class="btn btn-outline-secondary mr-1 p-2" th:onclick="uptBoard([[${board.boardId}]])">
                     <i class="fa fa-cog"></i>
-                    수정
-                </a>&nbsp;
-                <button type="button" class="btn btn-outline-secondary p-2" th:onclick="delBoard([[${stockId}]], [[${board.boardId}]])">
-                    <i class="fa fa-trash"></i> 삭제
+                </button>&nbsp;
+                <button type="button" class="btn btn-outline-secondary p-2" th:onclick="delBoard([[${board.stock.stockId}]], [[${board.boardId}]])">
+                    <i class="fa fa-trash"></i>
                 </button>
             </div>
         </div>
@@ -55,8 +54,8 @@
 
         <div class="mt-5 p-2">
 
-            <div class="p-2" th:if="${user}">
-                <h5 classt="pb-1">댓글 작성</h5>
+            <div class="p-2" th:if="${username}">
+                <h5 class="pb-1">댓글 작성</h5>
                 <form th:action="@{/comment/create/{boardId}(boardId = ${board.boardId})}" th:method="POST">
                     <textarea class="form-control" name="content" row="4"></textarea>
 
@@ -73,7 +72,7 @@
 
             <div class="comment-form p-2" th:each="comment : ${board.comments}">
                 <div class="d-flex justify-content-between">
-                    <h5 class="text-primary" th:text="${comment.user.username}"></h5>
+                    <h5 class="text-primary" th:text="${comment.username}"></h5>
                     <span class="text-secondary" th:text="${#strings.replace(comment.createdAt, 'T', '-')}"></span>
                 </div>
 
@@ -81,7 +80,7 @@
                     <span th:text="${comment.content}"></span>
                 </div>
 
-                <div class="text-end" th:if="${comment.user.username} == ${user}">
+                <div class="text-end" th:if="${comment.username} == ${username}">
                     <button type="button" class="btn btn-outline-dark p-1 border border-0"
                             th:onclick="delComment([[${stockId}]], [[${board.boardId}]], [[${comment.commentId}]])">
                         <span><small>삭제</small></span>
