FEAT: Add sub pages in mypage

--- a/src/main/resources/templates/mypage/contents.html
+++ b/src/main/resources/templates/mypage/contents.html
@@ -7,8 +7,8 @@
 <nav class="bg-dark" th:replace="layout/layout :: menu('mypage')">
 </nav>
 
-<section>
 
+<section>
     <div class="main col-lg-8 m-auto h-100 p-3">
 
         <div class="text-end">
@@ -17,12 +17,12 @@
 
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" type="button" th:href="@{/mypage/bookmark}">
+                <a class="nav-link" type="button" th:href="@{/mypage/bookmark}">
                     북마크
                 </a>
             </li>
-            <li class="nav-item" >
-                <a class="nav-link" type="button" th:href="@{/mypage/contents}">
+            <li class="nav-item">
+                <a class="nav-link active" type="button" th:href="@{/mypage/contents}">
                     작성글
                 </a>
             </li>
@@ -44,7 +44,7 @@
                     <div class="p-3" style="font-size: .75rem !important;">
 
                         <div class="d-flex justify-content-between align-items-center mb-2">
-                            <h2>북마크한 글</h2>
+                            <h2>작성글</h2>
                         </div>
 
                         <table class="table">
@@ -55,12 +55,13 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="myBookMark : ${myBookMarks.dtoList}">
-                                <td th:text="${myBookMark.title}"></td>
-                                <td>[[${#temporals.format(myBookMark.createdAt, 'yyyy/MM/dd')}]]</td>
+                            <tr th:each="myContent : ${myContents.dtoList}">
+                                <td th:text="${myContent.title}"></td>
+                                <td>[[${#temporals.format(myContent.createdAt, 'yyyy/MM/dd')}]]</td>
                             </tr>
                             </tbody>
                         </table>
+
                     </div>
                 </div>
             </div>
