--- a/src/main/resources/templates/mypage/profile.html
+++ b/src/main/resources/templates/mypage/profile.html
@@ -7,6 +7,7 @@
 <nav class="bg-dark" th:replace="layout/layout :: menu('mypage')">
 </nav>
 
+
 <section>
 
     <div class="main col-lg-8 m-auto h-100 p-3">
@@ -17,7 +18,7 @@
 
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" type="button" th:href="@{/mypage/bookmark}">
+                <a class="nav-link" type="button" th:href="@{/mypage/bookmark}">
                     북마크
                 </a>
             </li>
@@ -31,40 +32,47 @@
                     좋아요한 글
                 </a>
             </li>
-            <li class="nav-item" role="presentation">
-                <a class="nav-link" type="button" th:href="@{/mypage/profile}">
+            <li class="nav-item">
+                <a class="nav-link active" type="button" th:href="@{/mypage/profile}">
                     프로필
                 </a>
             </li>
         </ul>
 
         <div class="tab-content h-75">
+
             <div class="tab-pane h-100 bg-white fade show active">
                 <div class="row p-0 m-0">
                     <div class="p-3" style="font-size: .75rem !important;">
 
                         <div class="d-flex justify-content-between align-items-center mb-2">
-                            <h2>북마크한 글</h2>
+                            <h2>비밀번호 변경</h2>
                         </div>
 
-                        <table class="table">
-                            <thead class="text-center fw-bold">
-                            <tr>
-                                <th>제목</th>
-                                <th>작성일시</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="myBookMark : ${myBookMarks.dtoList}">
-                                <td th:text="${myBookMark.title}"></td>
-                                <td>[[${#temporals.format(myBookMark.createdAt, 'yyyy/MM/dd')}]]</td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <form th:action="@{/mypage/updatePw}" th:method="POST">
+                            <input type="hidden" name="username" th:value="${username}">
+                            <label>
+                                <span>새 비밀번호</span>
+                            </label>
+                            <div class="py-2">
+                                <input class="form-control" type="password" name="password">
+                            </div>
+                            <label>
+                                <span>비밀번호 확인</span>
+                            </label>
+                            <div class="py-2">
+                                <input class="form-control" type="password" name="chkPassword">
+                            </div>
+                            <br>
+                            <div class="text-end">
+                                <button type="submit" class="btn btn-outline-success">
+                                    저장
+                                </button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-
         </div>
 
     </div>
