--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -70,3 +70,21 @@ section {
 #irgoBtn {
   background: #444;
 }
+
+
+
+.nav-tabs {
+  border: none !important;
+}
+.tab-pane.fade.active {
+  border: none !important;
+  box-shadow: rgb(0 0 0 / 4%) 0px 4px 16px 0px !important;
+}
+.nav-tabs .nav-link {
+  box-shadow: rgb(0 0 0 / 4%) 0px 4px -1px 0px !important;
+  border: none !important;
+}
+
+.card {
+  box-shadow: rgb(0 0 0 / 4%) 0px 4px 16px 0px !important;
+}
